broken scraper